--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <!-- <app-string-interpolation></app-string-interpolation> -->
 
 
-<app-property-binding></app-property-binding>
+<!-- <app-property-binding></app-property-binding> -->
+
+<!-- <app-event-binding></app-event-binding> -->
+
+<app-two-way-data-binding></app-two-way-data-binding>
