--- a/src/app/two-way-data-binding/two-way-data-binding.component.html
+++ b/src/app/two-way-data-binding/two-way-data-binding.component.html
@@ -3,19 +3,47 @@
         <mat-card-content>
             <form>
                 <mat-form-field style="width: 100%;">
-                    <input matInput placeholder="Enter your Name"
-                    [(ngModel)]="name1" name="anyname1">
+                    <input matInput placeholder="Enter your Name" [(ngModel)]="name1" name="anyname1">
                 </mat-form-field>
                 <mat-form-field style="width: 100%;">
-                    <input matInput placeholder="Enter your Name"
-                    [(ngModel)]="name2" name="anyname2">
+                    <input matInput placeholder="Enter your Name" [(ngModel)]="name2" name="anyname2">
                 </mat-form-field>
             </form>
         </mat-card-content>
         <mat-card-actions>
-          <p>{{name1}}</p>
+            <p>{{name1}}</p>
             <p>{{name2}}</p>
 
+        </mat-card-actions>
+    </mat-card>
+</section>
+
+<section>
+    <mat-card style="margin: 20px;">
+        <mat-card-title>
+            Client
+        </mat-card-title>
+        <mat-card-content>
+            <form style="width: 100%;">
+                <mat-form-field style="width: 100%;">
+                    <input matInput placeholder="First Name" name="firstname" [(ngModel)]="client.firstName">
+                </mat-form-field>
+                <mat-form-field style="width: 100%;">
+                    <input matInput placeholder="Last Name" name="lastname" [(ngModel)]="client.lastName">
+                </mat-form-field>
+                <mat-form-field style="width: 100%;">
+                    <input matInput placeholder="Address" name="address" [(ngModel)]="client.address">
+                </mat-form-field>
+                <mat-form-field style="width: 100%;">
+                    <input matInput placeholder="Age" type="number" name="age" [(ngModel)]="client.age">
+                </mat-form-field>
+            </form>
+        </mat-card-content>
+        <mat-card-actions>
+            <p>First Name: {{client.firstName}}</p>
+            <p>Last Name: {{client.lastName}}</p>
+            <p>Adress: {{client.address}}</p>
+            <p>Age: {{client.age}}</p>
         </mat-card-actions>
     </mat-card>
 </section>
